fixed layout bug

--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,6 @@
     scrollbar-width: thin;
   }
 
-  [popover] {padding: 0;} /*  Peskey 4px of padding on nav bar may have unintended consequence later keep an eye on this default is 0.25 em from user style sheet */
-
   :where(html) {
     --_page-bg-color: var(--surface-default);
 
@@ -366,15 +364,6 @@
     --surface-filled: light-dark(var(--gray-3), var(--gray-15));
     --surface-tonal: light-dark(var(--gray-3), var(--gray-12));
     --surface-elevated: light-dark(var(--gray-1), var(--gray-12));
-
-    /* Additional Surface*/
-    --surface-1: light-dark(var(--gray-1), var(--gray-13));
-    --surface-2: light-dark(var(--gray-3), var(--gray-15));
-    --surface-3: light-dark(var(--gray-3), var(--gray-12));
-    --surface-4: light-dark(var(--gray-1), var(--gray-12));
-    --well-1: light-dark(var(--gray-12), var(--gray-5));
-    --well-2: light-dark(var(--gray-15), var(--gray-3));
-
 
     /* Shadows */
     --shadow-color: light-dark(220 3% 15%, 220 40% 2%);
@@ -3823,7 +3812,7 @@
 
         >nav, >aside, >footer {position: static; transform: none; opacity: 1;}
         >nav, >aside {height: auto; max-height: none; width: auto;}
-        >nav {background-color: var(--surface-elevated;border-color: var(--_border-color);border-radius: var(--border-radius, 0.25rem);border-style: solid;}
+        >nav {background-color: var(--_bg-color);border-color: var(--_border-color);border-radius: var(--border-radius, 0.25rem);border-style: solid;}
 
 
         >nav[popover], >aside[popover], >footer[popover] { position: fixed; transition: opacity 300ms, transform 300ms;}
@@ -4064,13 +4053,8 @@
   :where(.well){--_well:initial;background:var(--_well,var(--well-1))}
   :where(.well) :where(.well){--_well:var(--well-2)}
   :where(.shadow){--_shadow:initial;box-shadow:var(--_shadow,var(--shadow-3))}
-
-
-  :where(.border) { border: var(--border-width) solid var(--border-color); border-radius: var(--border-radius);}
-  :where(.border-1) { border: var(--border-width) solid var(--border-color); border-radius: var(--size-1);}
-  :where(.border-2) { border: var(--border-width) solid var(--border-color); border-radius: var(--size-2);}
-  :where(.border-3) { border: var(--border-width) solid var(--border-color); border-radius: var(--size-3);}
-
+  :where(.border){--_border-size:initial;--_border-style:initial;--_border-color:initial;border:var(--_border-size,var(--border-size-1))var(--_border-style,solid)var(--_border-color,var(--surface-2))}
+  :where(.border) :where(.surface){--_border-color:var(--surface-3)}
   :where(.gradient-border) { border-width: var(--size-3); border-image-slice: 1; border-image-source: var(--conic-gradient-3); }
   :where(.border-between-block) > * + * { border-block-start-width: var(--border); }
   :where(.border-between-inline) > * + * { border-inline-start-width: var(--border); }
